deps/v8/test/message/fail/modules-cycle2.out
*%(basename)s:5: SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle2.mjs'
import {a} from "modules-skip-cycle2.mjs";
        ^
SyntaxError: Detected cycle while resolving name 'a' in 'modules-skip-cycle2.mjs'

